Fix for There is no active transaction. This error is usually caused by custom plug-ins that ignore errors from service calls and continue processing. #5
Added Unit Testing

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 /WebResources/dlab_/scripts/DLaB.AutoNumbering.js
+/DLaB.XrmAutoNumberGenerator.Test/UnitTestSettings.user.config
