--- a/DLaB.XrmAutoNumberGenerator/DLaB.XrmAutoNumberGenerator.csproj
+++ b/DLaB.XrmAutoNumberGenerator/DLaB.XrmAutoNumberGenerator.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\ILRepack.2.0.13\build\ILRepack.props" Condition="Exists('..\packages\ILRepack.2.0.13\build\ILRepack.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -11,6 +12,8 @@
     <AssemblyName>DLaB.XrmAutoNumberGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,13 +48,11 @@
     <AssemblyOriginatorKeyFile>DLaB.XrmAutoNumberGenerator.Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DLaB.Common, Version=1.0.1.13, Culture=neutral, PublicKeyToken=046d6d5d1685e1b4, processorArchitecture=MSIL">
-      <HintPath>..\packages\DLaB.Common.1.0.1.13\lib\net452\DLaB.Common.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="DLaB.Common, Version=1.0.4.11, Culture=neutral, PublicKeyToken=046d6d5d1685e1b4, processorArchitecture=MSIL">
+      <HintPath>..\packages\DLaB.Common.1.0.4.11\lib\net452\DLaB.Common.dll</HintPath>
     </Reference>
-    <Reference Include="DLaB.Xrm.2015, Version=1.1.8.7, Culture=neutral, PublicKeyToken=4da76fa437c5906e, processorArchitecture=MSIL">
-      <HintPath>..\packages\DLaB.Xrm.2015.1.1.8.7\lib\net452\DLaB.Xrm.2015.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="DLaB.Xrm.2015, Version=1.3.0.2, Culture=neutral, PublicKeyToken=4da76fa437c5906e, processorArchitecture=MSIL">
+      <HintPath>..\packages\DLaB.Xrm.2015.1.3.0.2\lib\net452\DLaB.Xrm.2015.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Crm.Sdk.Proxy, Version=8.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.8.0.1\lib\net45\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
@@ -85,6 +86,7 @@
   <ItemGroup>
     <Compile Include="AutoNumberIncrementor.cs" />
     <Compile Include="AutoNumberRegister.cs" />
+    <Compile Include="Entities\BusinessUnit.cs" />
     <Compile Include="Entities\CrmContext.cs" />
     <Compile Include="Entities\dlab_AutoNumbering.cs" />
     <Compile Include="Entities\EntityExtensions\dlab_AutoNumbering.cs" />
@@ -98,6 +100,7 @@
     <Compile Include="Entities\SdkMessage.cs" />
     <Compile Include="Entities\SdkMessageFilter.cs" />
     <Compile Include="Entities\SdkMessageProcessingStep.cs" />
+    <Compile Include="Entities\SystemUser.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="LocalPluginContext.cs" />
     <Compile Include="PluginBase.cs" />
@@ -120,9 +123,15 @@ REM **** Delete Previous Log ****
 del "$(TargetDir)IlMerge\Log.txt"
 
 REM **** Run IlMerge ****
-"$(SolutionDir)packages\ILMerge.2.14.1208\tools\ILMerge.exe" /log:"$(TargetDir)IlMerge\Log.txt" /keyfile:"$(ProjectDir)$(ProjectName).Key.snk" /targetplatform:"v4,c:\windows\Microsoft.NET\Framework\v4.0.30319" /out:"$(TargetDir)IlMerge\$(TargetFileName)" "$(TargetPath)" "$(TargetDir)DLaB.Common.dll" "$(TargetDir)DLaB.Xrm.2015.dll"
+"$(SolutionDir)packages\ILRepack.2.0.13\tools\ILRepack.exe" /log:"$(TargetDir)IlMerge\Log.txt" /keyfile:"$(ProjectDir)$(ProjectName).Key.snk" /targetplatform:"v4,c:\windows\Microsoft.NET\Framework\v4.0.30319" /out:"$(TargetDir)IlMerge\$(TargetFileName)" "$(TargetPath)" "$(TargetDir)DLaB.Common.dll" "$(TargetDir)DLaB.Xrm.2015.dll"
 :exit</PostBuildEvent>
   </PropertyGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\ILRepack.2.0.13\build\ILRepack.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ILRepack.2.0.13\build\ILRepack.props'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
