--- a/DLaB.XrmAutoNumberGenerator/packages.config
+++ b/DLaB.XrmAutoNumberGenerator/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DLaB.Common" version="1.0.1.13" targetFramework="net452" />
-  <package id="DLaB.Xrm.2015" version="1.1.8.7" targetFramework="net452" />
-  <package id="ILMerge" version="2.14.1208" targetFramework="net452" />
+  <package id="DLaB.Common" version="1.0.4.11" targetFramework="net452" />
+  <package id="DLaB.Xrm.2015" version="1.3.0.2" targetFramework="net452" />
+  <package id="ILRepack" version="2.0.13" targetFramework="net452" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="8.0.1" targetFramework="net452" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net452" />
 </packages>
